# soroban-hello-token

./: .gitignore  README.md
smartcontract/: Cargo.toml
smartcontract/src/: lib.rs  lib_bak.rs  test.rs  test_bak.rs  testutils.rs
