[package]
name = "soroban-hello-token"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils",  "soroban-auth/testutils"]

[dependencies]
soroban-sdk = "0.1.0"
soroban-auth = "0.1.0"
stellar-strkey = "0.0.6"
ed25519-dalek = "1.0.1"
rand = { version = "0.7.3"}
dotenv_codegen = "0.15.0"
# stellar_sdk = "*"

[dev_dependencies]
soroban-sdk = { version = "0.1.0", features = ["testutils"] }
soroban-auth = { version = "0.1.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

# The testutils test utilities are automatically enabled inside Rust unit tests inside the same crate as your contract. If you write Rust integration tests, or write tests from another crate, you'll need to add #[cfg(feature = "testutils")] to those tests and enable the testutils feature when running your tests with cargo test --features testutils to be able to use those test utilities.
# wasm-opt -Oz \
#     target/wasm32-unknown-unknown/release/soroban_hello_token.wasm \
#     -o target/wasm32-unknown-unknown/release/soroban_hello_token_optimized.wasm